add getkeymetadata endpoint
