# pkg/api/v1/key_manager.pb.gw.go
@@ -109,6 +109,32 @@ func local_request_KeyManager_ListKeys_0(ctx context.Context, marshaler runtime.
 
 }
 
+func request_KeyManager_GetKeyMetadata_0(ctx context.Context, marshaler runtime.Marshaler, client KeyManagerClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetKeyMetadataRequest
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.GetKeyMetadata(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_KeyManager_GetKeyMetadata_0(ctx context.Context, marshaler runtime.Marshaler, server KeyManagerServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetKeyMetadataRequest
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.GetKeyMetadata(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterKeyManagerHandlerServer registers the http handlers for service KeyManager to "mux".
 // UnaryRPC     :call KeyManagerServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -188,6 +214,31 @@ func RegisterKeyManagerHandlerServer(ctx context.Context, mux *runtime.ServeMux,
 		}
 
 		forward_KeyManager_ListKeys_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_KeyManager_GetKeyMetadata_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/keymanager.v1.KeyManager/GetKeyMetadata", runtime.WithHTTPPathPattern("/keymanager.v1.KeyManager/GetKeyMetadata"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_KeyManager_GetKeyMetadata_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_KeyManager_GetKeyMetadata_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -298,6 +349,28 @@ func RegisterKeyManagerHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 
 	})
 
+	mux.Handle("POST", pattern_KeyManager_GetKeyMetadata_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/keymanager.v1.KeyManager/GetKeyMetadata", runtime.WithHTTPPathPattern("/keymanager.v1.KeyManager/GetKeyMetadata"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_KeyManager_GetKeyMetadata_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_KeyManager_GetKeyMetadata_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -307,6 +380,8 @@ var (
 	pattern_KeyManager_ImportKey_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"keymanager.v1.KeyManager", "ImportKey"}, ""))
 
 	pattern_KeyManager_ListKeys_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"keymanager.v1.KeyManager", "ListKeys"}, ""))
+
+	pattern_KeyManager_GetKeyMetadata_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"keymanager.v1.KeyManager", "GetKeyMetadata"}, ""))
 )
 
 var (
@@ -315,4 +390,6 @@ var (
 	forward_KeyManager_ImportKey_0 = runtime.ForwardResponseMessage
 
 	forward_KeyManager_ListKeys_0 = runtime.ForwardResponseMessage
+
+	forward_KeyManager_GetKeyMetadata_0 = runtime.ForwardResponseMessage
 )
