# swagger/grpc.swagger.yaml
@@ -30,6 +30,26 @@ paths:
             $ref: '#/definitions/v1GenerateKeyPairRequest'
       tags:
         - KeyManager
+  /keymanager.v1.KeyManager/GetKeyMetadata:
+    post:
+      operationId: KeyManager_GetKeyMetadata
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/v1GetKeyMetadataResponse'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/v1GetKeyMetadataRequest'
+      tags:
+        - KeyManager
   /keymanager.v1.KeyManager/ImportKey:
     post:
       operationId: KeyManager_ImportKey
@@ -133,6 +153,29 @@ definitions:
       publicKeyG2:
         type: string
         title: G2 Public key hex of the generated keypair
+  v1GetKeyMetadataRequest:
+    type: object
+    properties:
+      publicKeyG1:
+        type: string
+        title: Public key to get
+  v1GetKeyMetadataResponse:
+    type: object
+    properties:
+      publicKeyG1:
+        type: string
+        title: Public key G1
+      publicKeyG2:
+        type: string
+        title: Public key G2
+      createdAt:
+        type: string
+        format: int64
+        title: Create at timestamp
+      updatedAt:
+        type: string
+        format: int64
+        title: Updated at timestamp
   v1ImportKeyRequest:
     type: object
     properties:
